--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@600&display=swap');
+:root {
+  /* colors */
+  --main-color: #B6F09C;
+  --background-color: #131619;
+  --sec-background-color:#1A1D21;
+  --third-background-color:#0D0F10;
+  --background-card: linear-gradient(118deg, rgba(215, 237, 237, 0.16) -47.79%, rgba(204, 235, 235, 0.00) 100%);
+  --main-text-color: #FFF;
+  --p-text-color: #9B9C9E;
+  --p-secound-text-color:#4D62E5;
+  --span-text-color:#686B6E;
+  --logo-color:linear-gradient(45deg, #82DBF7 0%, #B6F09C 100%);
+  /* size */
+  --p-font-size:1rem;
+  --sec-p-font-size:0.75rem;
+  --section-title-fontsize:1.25rem;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* start global rules */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+@media screen and (width < 992px) {
+  :root{
+    font-size: 12px;
+  }
+}
+@media screen and (width > 1440px) {
+  :root{
+    font-size: 20px;
+  }
+}
+html {
+  scroll-behavior: smooth;
+}
+body {
+  font-family: 'Plus Jakarta Sans' ;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
